--- a/app/modules/common/views/widgets.html
+++ b/app/modules/common/views/widgets.html
@@ -1,6 +1,4 @@
 
-<swiper swiper-name="riskAssesment"></swiper>
-<swiper swiper-name="other"></swiper>
 <div class="col-xs-12">
 	<div class="col-xs-2">
 		<fin-calendar-form ng-model="equity" format="percent" type="blue" min="0" max="100"></fin-calendar-form>
@@ -108,3 +106,46 @@
     </div>
   </div>
 </div>
+
+<show-tip quick-tip-data="[{'tip':'Amount invested in ELSS schemes will have a lock-in period of 3 years'},{'tip':'Investment in ELSS schemes can be deemed towards a 3-year financial goal, or even for long term wealth building.'}]"></show-tip>
+
+<info-tip quick-tip-data="[{'tip':'Amount invested in ELSS schemes will have a lock-in period of 3 years'}]" info-width="48px" style="margin-top:-60px"></info-tip>
+
+<div class="testSCroll" ng-scrollbars>
+	<div class="main">
+	<p>dsfdskgfjdshgfdsgfjgdsfhd</p>
+	</div>
+	<div class="main">
+	<p>dsfdskgfjdshgfdsgfjgdsfhd</p>
+	</div><div class="main">
+	<p>dsfdskgfjdshgfdsgfjgdsfhd</p>
+	</div><div class="main">
+	<p>dsfdskgfjdshgfdsgfjgdsfhd</p>
+	</div><div class="main">
+	<p>dsfdskgfjdshgfdsgfjgdsfhd</p>
+	</div><div class="main">
+	<p>dsfdskgfjdshgfdsgfjgdsfhd</p>
+	</div><div class="main">
+	<p>dsfdskgfjdshgfdsgfjgdsfhd</p>
+	</div><div class="main">
+	<p>dsfdskgfjdshgfdsgfjgdsfhd</p>
+	</div><div class="main">
+	<p>dsfdskgfjdshgfdsgfjgdsfhd</p>
+	</div><div class="main">
+	<p>dsfdskgfjdshgfdsgfjgdsfhd</p>
+	</div><div class="main">
+	<p>dsfdskgfjdshgfdsgfjgdsfhd</p>
+	</div><div class="main">
+	<p>dsfdskgfjdshgfdsgfjgdsfhd</p>
+	</div><div class="main">
+	<p>dsfdskgfjdshgfdsgfjgdsfhd</p>
+	</div><div class="main">
+	<p>dsfdskgfjdshgfdsgfjgdsfhd</p>
+	</div><div class="main">
+	<p>dsfdskgfjdshgfdsgfjgdsfhd</p>
+	</div><div class="main">
+	<p>dsfdskgfjdshgfdsgfjgdsfhd</p>
+	</div>
+</div>
+
+<input type="text" class="datepicker" placeholder="DD/MM/YYYY" data-datepicker="{theme: 'flat',dateformat: 'DD/MM/YYYY'}" data-ng-model="value1">
