--- a/app/modules/goals/modules/retirement/views/retirement.html
+++ b/app/modules/goals/modules/retirement/views/retirement.html
@@ -1,3 +1,3 @@
-<section class="swiper-outer-cover">
-	<swiper swiper-name="retirement" reduce="true" result="resultObject" callback-fn="appendFormValues(data)" callmodal-fn="showEquityModal()" indicator-end="Retirement"></swiper>
+<section class="fadeIn swiper-outer-cover">
+	<swiper swiper-name="retirement" controller-name="retirementGoalsController" reduce="true" result="resultObject" callback-fn="appendFormValues(data)" callmodal-fn="showEquityModal()" indicator-end="Retirement"></swiper>
 </section>
