--- a/app/modules/planinvestment/modules/quickInvest/views/quickIvest.html
+++ b/app/modules/planinvestment/modules/quickInvest/views/quickIvest.html
@@ -1,5 +1,5 @@
 <section class="swiper-outer-cover">
-	<swiper swiper-name="quickInvest" reduce="true" result="resultObject" callback-fn="appendFormValues(data)" callmodal-fn="showEquityModal()" indicator-end="Review"></swiper>
+	<swiper swiper-name="quickInvest" controller-name="quickInvestController" reduce="true" result="resultObject" callback-fn="appendFormValues(data)" callmodal-fn="showEquityModal()" indicator-end="Review"></swiper>
 </section>
 <div class="modal fade fade-scale" id="equiDeptModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog" role="document">
