--- a/app/modules/planinvestment/views/planinvest.html
+++ b/app/modules/planinvestment/views/planinvest.html
@@ -13,7 +13,7 @@
 					<div class="image-div">
 						<img src="assets/images/planInvestMent.png">
 					</div>	
-					<button click-redirect="/quickInvest" class="fin-app-btn fin-blue full-width">Quick Invest</button>				
+					<button click-redirect="/quickInvestStart" class="fin-app-btn fin-blue full-width">Quick Invest</button>				
 				</div>
 				<div class="col-xs-12 desc">
 					<p class="text-center">Simply Build Wealth through monthly<span class="nextline">SIP or one-time lumpsum investment or both.</span></p>
@@ -30,7 +30,7 @@
 					<div class="image-div">
 						<img src="assets/images/specifyGoals.png">
 					</div>
-					<button class="fin-app-btn fin-blue full-width">Set Financial Goals</button>
+					<button click-redirect="/goals" class="fin-app-btn fin-blue full-width">Set Financial Goals</button>
 				</div>
 				<div class="col-xs-12 desc">
 					<p class="text-center">Save for a financial goal like Retirement,<span class="nextline">Education, Vacation, etc.</span></p>
@@ -47,7 +47,7 @@
 					<div class="image-div">
 						<img src="assets/images/saveTax.png">
 					</div>
-					<button class="fin-app-btn fin-blue full-width">Save Taxes</button>
+					<button click-redirect="/taxsavingStarted" class="fin-app-btn fin-blue full-width">Save Taxes</button>
 				</div>
 				<div class="col-xs-12 desc">
 					<p class="text-center">Invest in Equity Linked Savings Schemes<span class="nextline">(ELSS) and save taxes under section</span><span class="nextline">80C.</span></p>
