--- a/app/modules/goals/modules/retirement/views/retirementStarted.html
+++ b/app/modules/goals/modules/retirement/views/retirementStarted.html
@@ -1,4 +1,4 @@
-<section class="quickInvest retirement">
+<section class="fadeIn quickInvest retirement">
     <form name="quickInvestForm1" novalidate>
         <div class="content-main-header">
             <div class="slider-entry-image">
@@ -17,7 +17,7 @@
                 <div class="fin-btn-cover started">
                     <div class="fin-btn-group">
                         <button ng-click="back()" class="fin-link-btn"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
-                        <button ng-disabled="quickInvestForm1.$invalid" class="fin-app-btn fin-orange" click-redirect="/quickInvest">CONTINUE</button>
+                        <button ng-disabled="quickInvestForm1.$invalid" class="fin-app-btn fin-orange" click-redirect="/retirement">CONTINUE</button>
                     </div>
                 </div>
             </div>
