--- a/app/modules/goals/views/goal.html
+++ b/app/modules/goals/views/goal.html
@@ -14,7 +14,7 @@
 				<h2>Retirement</h2>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
-				<div class="goals-cover" click-redirect="/planInvest">
+				<div class="goals-cover" click-redirect="/educationStarted">
 					<div class="image-div">
 						<img src="assets/images/education.png">
 					</div>
@@ -26,7 +26,7 @@
 				<h2>Education</h2>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
-				<div class="goals-cover">
+				<div class="goals-cover" click-redirect="/propertyStarted">
 					<div class="image-div">
 						<img src="assets/images/property.png">
 					</div>
@@ -38,7 +38,7 @@
 				<h2>Property</h2>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
-				<div class="goals-cover">
+				<div class="goals-cover" click-redirect="/automobileStarted">
 					<div class="image-div">
 						<img src="assets/images/automobile.png">
 					</div>
@@ -54,7 +54,7 @@
 	<div class="col-xs-12 goal-section">
 		<div class="row">
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
-				<div class="goals-cover">
+				<div class="goals-cover" click-redirect="/vacationStarted">
 						<div class="image-div">
 							<img src="assets/images/vacation.png">
 						</div>
@@ -66,7 +66,7 @@
 				<h2>Vacation</h2>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
-				<div class="goals-cover" click-redirect="/planInvest">
+				<div class="goals-cover" click-redirect="/weddingStarted">
 					<div class="image-div">
 						<img src="assets/images/wedding.png">
 					</div>
@@ -78,7 +78,7 @@
 				<h2>Wedding</h2>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
-				<div class="goals-cover">
+				<div class="goals-cover" click-redirect="/othersStarted">
 					<div class="image-div">
 						<img src="assets/images/others.png">
 					</div>
