Added graph functionality

--- a/app/modules/common/views/widgets.html
+++ b/app/modules/common/views/widgets.html
@@ -1,3 +1,62 @@
+<div class="table-outer-cover schemeTable">
+	<div class="thead">
+		<div class="tr">
+			<div class="th">
+				<p>Equity Schemes</p>
+			</div>
+			<div class="th">
+				<p>Sub Type</p>
+			</div>
+			<div class="th">
+				<p>SIP</p>
+			</div>
+			<div class="th">
+				<p>Lumpsum</p>
+			</div>
+		</div>
+	</div>
+	<div class="tbody">
+		<div class="tr">
+			<div class="td">
+				<p class="schemes">Kotal select Focus Growth</p>
+			</div>
+			<div class="td">
+				<p>Large Cap</p>
+			</div>
+			<div class="td">
+				<p><span class="currency">&#8377;</span>83,200</p>
+			</div>
+			<div class="td">
+				<p><span class="currency">&#8377;</span>93,200</p>
+			</div>
+		</div>
+		<div class="tr">
+			<div class="td">
+				<p class="schemes">SBI BlueChip Fund Regular Growth</p>
+			</div>
+			<div class="td">
+				<p>Large Cap</p>
+			</div>
+			<div class="td">
+				<p><span class="currency">&#8377;</span>83,200</p>
+			</div>
+			<div class="td">
+				<p><span class="currency">&#8377;</span>93,200</p>
+			</div>
+		</div>
+	</div>
+	<div class="tfooter">
+		<div class="fin-btn-group">
+			<button class="fin-app-btn fin-orange">COMPARE & MODIFY</button>
+		</div>
+	</div>
+</div>
+
+
+
+
+
+
 
 <div class="col-xs-12">
 	<div class="col-xs-2">
@@ -149,3 +208,5 @@
 </div>
 
 <input type="text" class="datepicker" placeholder="DD/MM/YYYY" data-datepicker="{theme: 'flat',dateformat: 'DD/MM/YYYY'}" data-ng-model="value1">
+
+
