--- a/app/modules/dashboard/views/dashboard.html
+++ b/app/modules/dashboard/views/dashboard.html
@@ -7,7 +7,7 @@
 							<img src="assets/images/riskassessmentMain.png">
 						</div>
 					<div class="checkbox-cover">
-						<input type="checkbox" name>
+						<input type="radio" name>
 						<label><span></span></label>
 					</div>
 				</div>
@@ -23,7 +23,7 @@
 						<img src="assets/images/dashboardImage2.png">
 					</div>
 					<div class="checkbox-cover">
-						<input type="checkbox" name>
+						<input type="radio" name>
 						<label><span></span></label>
 					</div>
 				</div>
@@ -39,7 +39,7 @@
 						<img src="assets/images/dashboardImage3.png">
 					</div>
 					<div class="checkbox-cover">
-						<input type="checkbox" name>
+						<input type="radio" name>
 						<label><span></span></label>
 					</div>
 				</div>
@@ -55,7 +55,7 @@
 						<img src="assets/images/dashboardImage4.png">
 					</div>
 					<div class="checkbox-cover">
-						<input type="checkbox" name>
+						<input type="radio" name>
 						<label><span></span></label>
 					</div>
 				</div>
