--- a/app/modules/goals/views/goal.html
+++ b/app/modules/goals/views/goal.html
@@ -7,7 +7,7 @@
 							<img src="assets/images/retirement.png">
 						</div>
 					<div class="checkbox-cover">
-						<input type="checkbox" name>
+						<input type="radio" name>
 						<label><span></span></label>
 					</div>
 				</div>
@@ -19,7 +19,7 @@
 						<img src="assets/images/education.png">
 					</div>
 					<div class="checkbox-cover">
-						<input type="checkbox" name>
+						<input type="radio" name>
 						<label><span></span></label>
 					</div>
 				</div>
@@ -31,7 +31,7 @@
 						<img src="assets/images/property.png">
 					</div>
 					<div class="checkbox-cover">
-						<input type="checkbox" name>
+						<input type="radio" name>
 						<label><span></span></label>
 					</div>
 				</div>
@@ -43,7 +43,7 @@
 						<img src="assets/images/automobile.png">
 					</div>
 					<div class="checkbox-cover">
-						<input type="checkbox" name>
+						<input type="radio" name>
 						<label><span></span></label>
 					</div>
 				</div>
@@ -59,7 +59,7 @@
 							<img src="assets/images/vacation.png">
 						</div>
 					<div class="checkbox-cover">
-						<input type="checkbox" name>
+						<input type="radio" name>
 						<label><span></span></label>
 					</div>
 				</div>
@@ -71,7 +71,7 @@
 						<img src="assets/images/wedding.png">
 					</div>
 					<div class="checkbox-cover">
-						<input type="checkbox" name>
+						<input type="radio" name>
 						<label><span></span></label>
 					</div>
 				</div>
@@ -83,7 +83,7 @@
 						<img src="assets/images/others.png">
 					</div>
 					<div class="checkbox-cover">
-						<input type="checkbox" name>
+						<input type="radio" name>
 						<label><span></span></label>
 					</div>
 				</div>
