--- a/less/main.less
+++ b/less/main.less
@@ -13,3 +13,5 @@
 @import 'modal.less';
 @import 'widgets.less';
 @import 'registerInvestor.less';
+@import 'table.less';
+@import 'smartpolio.less';
