--- a/less/swiper.less
+++ b/less/swiper.less
@@ -79,7 +79,19 @@
           .PIXEL2EM(16);
           text-align:right;     
         }
-      }  
+      } 
+
+      .typeSwiper{
+        &.retirement{
+          width:171px;
+          .image-backdrop{
+            img{
+              width:97%;
+            }
+          }
+        }        
+      }
+
       &.retirement,
       &.education,
       &.property,
