--- a/app/modules/planinvestment/views/planinvest.html
+++ b/app/modules/planinvestment/views/planinvest.html
@@ -7,7 +7,7 @@
 					<div class="cloud1"><img src="assets/images/login_cloud1.png"></div>
 					<div class="cloud2"><img src="assets/images/login_cloud2.png"></div>
 					<div class="checkbox-cover">
-						<input type="checkbox" name>
+						<input type="radio" name>
 						<label><span></span></label>
 					</div>
 					<div class="image-div">
@@ -24,7 +24,7 @@
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 invest-outer-cover">
 				<div class="investCover">
 					<div class="checkbox-cover">
-						<input type="checkbox" name>
+						<input type="radio" name>
 						<label><span></span></label>
 					</div>
 					<div class="image-div">
@@ -41,7 +41,7 @@
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 invest-outer-cover">
 				<div class="investCover">
 					<div class="checkbox-cover">
-						<input type="checkbox" name>
+						<input type="radio" name>
 						<label><span></span></label>
 					</div>
 					<div class="image-div">
@@ -58,7 +58,7 @@
 			<div class="col-xs-12 col-sm-6 col-md-3 col-lg-3 invest-outer-cover">
 				<div class="investCover">
 					<div class="checkbox-cover">
-						<input type="checkbox" name>
+						<input type="radio" name>
 						<label><span></span></label>
 					</div>
 					<div class="image-div">
