--- a/app/modules/dashboard/views/dashboard.html
+++ b/app/modules/dashboard/views/dashboard.html
@@ -34,7 +34,7 @@
 				<h4 class="text-center">Annual investments in varied goals</h4>
 			</div>
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
-				<div class="goals-cover">
+				<div class="goals-cover" click-redirect="/investWindrawStart">
 					<div class="image-div">
 						<img src="assets/images/dashboardImage3.png">
 					</div>
