--- a/less/goals.less
+++ b/less/goals.less
@@ -14,6 +14,11 @@
 						img{
 							width:54%!important;
 						}
+						&.widthDrawImage{
+							img{
+								width:96%!important;
+							}
+						}
 					}
 				}
 				&:nth-child(3){
@@ -111,7 +116,9 @@
 		}
 	}		
 }
-
+.invest{
+	padding-top:8%!important;	
+}
 .retirement{
 	.content-main-header{
 		.slider-entry-image{
