--- a/less/modal.less
+++ b/less/modal.less
@@ -54,3 +54,23 @@
 		}		
 	}	
 }
+
+#withdrawModal{
+	.modal-dialog{
+		width:50%;
+		.modal-content{
+			width:100%;
+		}
+		.modal-wrapper{
+			padding:2% 5% 6% 5%;
+			.withdrawModalTable{
+				width:100%;
+				height:200px;
+				box-shadow:none;
+				.seperate-cover{
+					width:100%;
+				}
+			}
+		}
+	}
+}
