--- a/app/modules/riskassesment/views/riskassesmentMore.html
+++ b/app/modules/riskassesment/views/riskassesmentMore.html
@@ -1,3 +1,3 @@
 <section class="swiper-outer-cover">
-	<swiper swiper-name="riskAssesment2" result="resultObject" callback-fn="appendFormValues(data)" indicator-end="Assesment"></swiper>
+	<swiper swiper-name="riskAssesment2" controller-name="riskController" result="resultObject" callback-fn="appendFormValues(data)" indicator-end="Assesment"></swiper>
 </section>
