--- a/app/modules/common/views/drawer.html
+++ b/app/modules/common/views/drawer.html
@@ -17,7 +17,7 @@
       <ul id="accordion1" ng-if="loggedIn">
         <li class="panel active"><a href="javascript:void(0)">Dashboard</a></li>
         <li class="panel"><a href="javascript:void(0)">Risk Assessment</a></li>
-        <li class="panel"><a href="#secoundLink" data-toggle="collapse" data-parent="#accordion1">Build Financial Goals</a>
+        <li class="panel"><a href="javascript:void(0)" data-target="#secoundLink" data-toggle="collapse" data-parent="#accordion1">Build Financial Goals</a>
             <ul id="secoundLink" class="collapse secondLevel">
               <li><a href="javascript:void(0)">Retirement</a></li>
               <li><a href="javascript:void(0)">Education</a></li>
@@ -30,6 +30,7 @@
         </li>
         <li class="panel"><a href="javascript:void(0)">Build Smart Portfolio</a></li>        
         <li class="panel"><a href="javascript:void(0)">Track Performance</a></li>
+        <li class="panel"><a href="javascript:void(0)" click-redirect="/registerInvestorStart">Investor Registration</a></li>
         <li class="panel"><a href="javascript:void(0)">Help?</a></li>
       </ul>
       <p class="copywrite"><span>Finaskus</span><span>&copy;</span><span>2016</span></p>
