--- a/app/modules/dashboard/views/dashboard.html
+++ b/app/modules/dashboard/views/dashboard.html
@@ -2,7 +2,7 @@
 	<div class="col-xs-12">
 		<div class="row">
 			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
-				<div class="goals-cover">
+				<div class="goals-cover" click-redirect="/riskAssesment">
 						<div class="image-div">
 							<img src="assets/images/riskassessmentMain.png">
 						</div>
