--- a/less/modal.less
+++ b/less/modal.less
@@ -70,6 +70,26 @@
 				.seperate-cover{
 					width:100%;
 				}
+				.thead{
+					.th{
+						&:nth-child(1){
+							width:40%;
+							float:left;
+						}
+						&:nth-child(2){
+							width:20%;
+							float:left;
+						}
+						&:nth-child(3){
+							width:20%;
+							float:left;
+						}
+						&:nth-child(4){
+							width:20%;
+							float:left;
+						}
+					}
+				}
 			}
 		}
 	}
