--- a/less/registerInvestor.less
+++ b/less/registerInvestor.less
@@ -39,6 +39,7 @@ section{
 			padding-top:1%;
 			padding-bottom:2%;
 			.checklist{
+				cursor:pointer;
 				width:100%;
 				float:left;
 				&:not(:last-child){
